# pv204_project

./: Cargo.toml  LICENSE  README.md  app.py  broadcast_workflow.py  cli.py  keygen.py  nostr.py  nostr_client.py  own_relay.py  pyproject.toml  sign_message.py  verify_signature.py
.github/workflows/: codacy.yml
keys/: public_key.txt  public_key_package.txt  signature.txt
keys/1/: secret_share.txt
keys/2/: secret_share.txt
keys/3/: secret_share.txt
keys/4/: secret_share.txt
keys/5/: secret_share.txt
src/: lib.rs
